--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.10.7"
   }
 }
